--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,15 @@ main:
 
   - title: "Publications"
     url: /publications/
-    
+
   - title: "News"
     url: /news/
+
+  # - title: "About"
+  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  # - title: "Sample Posts"
+  #   url: /year-archive/
+  # - title: "Sample Collections"
+  #   url: /collection-archive/
+  # - title: "Sitemap"
+  #   url: /sitemap/
