--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,7 @@
-# The following is the order of the links in the header of the website.
-#
-# Changing the order here will adjust the order and you can also add additional
-# links. Removing a link prevents it from showing in the header, but does not
-# prevent it from being included in the site.
-
+# main links
 main:
-  - title: "Home"
-    url: https://xianbangchen.github.io/
-
-  - title: "Publications"
-    url: /publications/
-
-  - title: "News"
-    url: /news/
-
+  - title: "Quick-Start Guide"
+    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
