--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Your Name"
 description              : "An amazing website."
-url                      : "https://xianbangchen.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://xianbangchen.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -113,9 +113,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  name             : "Xianbang Chen, Ph.D"
+  avatar           : /assets/images/bio-photo.png
+  bio              : ""
   location         : "Somewhere"
   email            :
   links:
