--- a/_config.yml
+++ b/_config.yml
@@ -115,28 +115,8 @@ analytics:
 author:
   name             : "Xianbang Chen, Ph.D"
   avatar           : /assets/images/bio-photo.png
-  bio              : ""
-  location         : "Somewhere"
-  email            :
-  links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+  employer         : "Stevens Institute of Technology"
+  email            : "xchen130@stevens.edu" 
 
 # Site Footer
 footer:
