--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Site Title"
+title                    : ""
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Your Name"
@@ -115,8 +115,16 @@ analytics:
 author:
   name             : "Xianbang Chen, Ph.D"
   avatar           : /assets/images/bio-photo.png
-  employer         : "Stevens Institute of Technology"
-  email            : "xchen130@stevens.edu" 
+  links:
+    - label: "Stevens Institute of Technology"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://www.stevens.edu/"
+    - label: "Email"
+      icon: "fas fa-fw fa-link"
+      url: "xchen130@stevens.edu"
+    - label: "Google Scholar"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "https://scholar.google.com/citations?user=woLL0SIAAAAJ&hl=en"
 
 # Site Footer
 footer:
