--- a/_config.yml
+++ b/_config.yml
@@ -117,13 +117,13 @@ author:
   avatar           : /assets/images/bio-photo.png
   links:
     - label: "Stevens Institute of Technology"
-      icon: "fab fa-fw fa-twitter-square"
+      icon: "fab fa-fw fa-school-square"
       url: "https://www.stevens.edu/"
-    - label: "Email"
-      icon: "fas fa-fw fa-link"
+    - label: "xchen130@stevens.edu"
+      icon: "fas fa-fw fa-envelope-square"
       url: "xchen130@stevens.edu"
     - label: "Google Scholar"
-      icon: "fas fa-fw fa-envelope-square"
+      icon: "fas fa-fw fa-link"
       url: "https://scholar.google.com/citations?user=woLL0SIAAAAJ&hl=en"
 
 # Site Footer
