--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "About"
     url: https://xianbangchen.github.io/
-  #- title: "Sample Posts"
-  #  url: /year-archive/
+  - title: "Sample Posts"
+    url: /year-archive/
   #- title: "Sample Collections"
   #  url: /collection-archive/
   #- title: "Sitemap"
