--- a/_config.yml
+++ b/_config.yml
@@ -122,6 +122,9 @@ author:
     - label: "xianbang.chen@cornell.edu"
       icon: "fas fa-fw fa-envelope-square"
       url: "xianbang.chen@cornell.edu"
+    - label: "xianbang.chen@ieee.org"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "xianbang.chen@ieee.org"
     - label: "Google Scholar"
       icon: "fas fa-fw fa-link"
       url: "https://scholar.google.com/citations?user=woLL0SIAAAAJ&hl=en"
