--- a/_config.yml
+++ b/_config.yml
@@ -119,15 +119,21 @@ author:
     - label: "Cornell University"
       icon: "fas fa-fw fa-university"
       url: "https://www.cornell.edu/"
+    - label: "Google Scholar"
+      icon: "fas fa-fw fa-graduation-cap"
+      url: "https://scholar.google.com/citations?user=woLL0SIAAAAJ&hl=en"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/xianbang-chen/"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/asxadf?tab=repositories"
     - label: "xianbang.chen@cornell.edu"
       icon: "fas fa-fw fa-envelope-square"
       url: "xianbang.chen@cornell.edu"
     - label: "xianbang.chen@ieee.org"
       icon: "fas fa-fw fa-envelope-square"
       url: "xianbang.chen@ieee.org"
-    - label: "Google Scholar"
-      icon: "fas fa-fw fa-link"
-      url: "https://scholar.google.com/citations?user=woLL0SIAAAAJ&hl=en"
 
 # Site Footer
 footer:
